fix: service symbol alignments

--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-1280.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-1280.scss
@@ -44,7 +44,7 @@
 
                 .title {
                     margin-top: 60px;
-                    margin-bottom: -10px;
+                    margin-bottom: -20px;
                     display: flex;
                     flex-direction: row;
                     font-size: 40px;
@@ -56,14 +56,16 @@
                     &__op {
                         font-size: 22px;
                         font-weight: bold;
-                        line-height: 4.86;
+                        padding-bottom:8px;
+                        margin-left: 4px;
                         color: #ff0420;
                     }
 
                     &__zk {
                         font-size: 22px;
                         font-weight: bold;
-                        line-height: 4.86;
+                        padding-bottom:8px;
+                        margin-left: 4px;
                         color: #06d863;
                     }
                 }
