--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-mobile.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-mobile.scss
@@ -61,6 +61,7 @@
                         font-size: 11px;
                         font-weight: bold;
                         line-height: 4.86;
+                        margin-left: 1px;
                         color: #ff0420;
                     }
 
@@ -68,6 +69,7 @@
                         font-size: 11px;
                         font-weight: bold;
                         line-height: 4.86;
+                        margin-left: 1px;
                         color: #06d863;
                     }
                 }
