--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-tablet.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer-tablet.scss
@@ -61,14 +61,16 @@
             &__op {
               font-size: 11px;
               font-weight: bold;
-              line-height: 4.86;
+              padding-bottom: 8px;
+              margin-left:1px;
               color: #ff0420;
             }
   
             &__zk {
               font-size: 11px;
               font-weight: bold;
-              line-height: 4.86;
+              padding-bottom: 8px;
+              margin-left:1px;
               color: #06d863;
             }
           }
