--- a/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer.scss
+++ b/src/views/HomeLayout/containers/L2PromoContainer/L2PromoContainer.scss
@@ -57,14 +57,16 @@
                     &__op {
                         font-size: 22px;
                         font-weight: bold;
-                        line-height: 4.86;
+                        line-height: 5.60;
+                        margin-left: 4px;
                         color: #ff0420;
                     }
 
                     &__zk {
                         font-size: 22px;
                         font-weight: bold;
-                        line-height: 4.86;
+                        line-height: 5.60;
+                        margin-left: 4px;
                         color: #06d863;
                     }
                 }
